# UIDefectMocker

./: .gitignore  README.md  add_description.py  config.py  config.yaml  filtered_250326.json  pyproject.toml  screenshot_labeled.py  uidm_main.py  开发日寄.md
defects/: real_world_defects.json
resources/broken_images/: 3.tmp
scripts/: aitw_sample.py  appcrawler_sample.py
uidm/: ui_defects.py  utils.py
